--- a/projects/data-view/src/lib/data-view/data-view.component.scss
+++ b/projects/data-view/src/lib/data-view/data-view.component.scss
@@ -1,3 +1,29 @@
 :host {
   display: block;
+  height: 100%;
+}
+
+.mat-drawer-container {
+  height: 100%;
+}
+
+.mat-drawer {
+  min-width: 320px;
+  max-width: 100%;
+}
+
+#table-container {
+  position: relative;
+}
+
+tds-table {
+  overflow: auto;
+}
+
+.mat-progress-bar {
+  position: absolute;
+  top: -4px;
+  right: 0;
+  left: 0;
+  z-index: 300;
 }
