--- a/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
@@ -6,12 +6,12 @@
     </ng-container>
 
     <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
         <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
     </ng-container>
 
     <ng-container matColumnDef="sobrenome">
-        <th mat-header-cell *matHeaderCellDef>Sobrenome</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sobrenome</th>
         <td mat-cell *matCellDef="let element">{{ element.sobrenome }}</td>
     </ng-container>
 
