Add filter buttons

--- a/projects/data-view/src/lib/search/_search.component.theme.scss
+++ b/projects/data-view/src/lib/search/_search.component.theme.scss
@@ -1,4 +1,4 @@
-@mixin app-search-theme($typography) {
+@mixin tds-search-theme($typography) {
   tds-search {
     input {
       @include mat-typography-level-to-styles($typography, title);
