--- a/projects/demo-app/src/app/funcionarios/filtro/filtro.component.html
+++ b/projects/demo-app/src/app/funcionarios/filtro/filtro.component.html
@@ -9,5 +9,5 @@
 
     <mat-divider></mat-divider>
 
-    <!-- <app-filter-buttons [ngForm]="ngForm"></app-filter-buttons> -->
+    <tds-filter-buttons [ngForm]="ngForm"></tds-filter-buttons>
 </form>
