Handle app themes

--- a/projects/demo-app/src/app/funcionarios/data-view/data-view.component.html
+++ b/projects/demo-app/src/app/funcionarios/data-view/data-view.component.html
@@ -1,1 +1,1 @@
-<tds-data-view [table]="table" [filter]="filter"></tds-data-view>
+<tds-data-view titulo="Funcionários" [table]="table" [filter]="filter"></tds-data-view>
