--- a/projects/demo-app/src/scss/_app-theme.scss
+++ b/projects/demo-app/src/scss/_app-theme.scss
@@ -3,7 +3,7 @@
 
 @import "./app-body-theme";
 
-@import "../../../data-view/src/lib/data-view.theme.scss";
+@import "projects/data-view/scss/data-view.component.theme";
 
 @mixin app-theme($theme, $typography) {
   /* Material */
