--- a/projects/data-view/src/lib/filter-buttons/filter-buttons.component.html
+++ b/projects/data-view/src/lib/filter-buttons/filter-buttons.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" fxLayoutGap="8px">
+<div fxLayout="row">
 
     <button mat-button type="button" (click)="reset()">
         Reiniciar
