Fix search colors

--- a/projects/data-view/scss/_data-view.component.theme.scss
+++ b/projects/data-view/scss/_data-view.component.theme.scss
@@ -2,6 +2,6 @@
 @import "./table.component.theme";
 
 @mixin data-view-theme($theme, $typography) {
-  @include tds-search-theme($typography);
+  @include tds-search-theme($theme, $typography);
   @include tds-table-theme($theme);
 }
