--- a/projects/demo-app/src/themes/candy-app-theme.scss
+++ b/projects/demo-app/src/themes/candy-app-theme.scss
@@ -1,8 +1,8 @@
 @mixin default-app-theme() {
   $primary: mat-palette($mat-indigo);
   $accent: mat-palette($mat-pink, A200, A100, A400);
-  $warn: mat-palette($mat-red);
-  $theme: mat-light-theme($primary, $accent, $warn);
+  $theme: mat-light-theme($primary, $accent);
+
   $typography: get-app-typography();
 
   @include angular-material-theme($theme);
