--- a/projects/demo-app/src/themes/dark-app-theme.scss
+++ b/projects/demo-app/src/themes/dark-app-theme.scss
@@ -1,8 +1,8 @@
 @mixin dark-app-theme() {
-  $primary: mat-palette($mat-blue-grey);
-  $accent: mat-palette($mat-amber, A200, A100, A400);
-  $warn: mat-palette($mat-deep-orange);
-  $theme: mat-dark-theme($primary, $accent, $warn);
+  $primary: mat-palette($mat-purple);
+  $accent: mat-palette($mat-green, A200, A100, A400);
+  $theme: mat-dark-theme($primary, $accent);
+
   $typography: get-app-typography();
 
   @include angular-material-theme($theme);
