--- a/projects/demo-app/src/app/funcionarios/data-view/data-view.component.html
+++ b/projects/demo-app/src/app/funcionarios/data-view/data-view.component.html
@@ -1,1 +1,2 @@
-<tds-data-view titulo="Funcionários" [table]="table" [filter]="filter" pageSize="20"></tds-data-view>
+<tds-data-view titulo="Funcionários" [table]="table" [filter]="filter" pageSize="20" margin="1em">
+</tds-data-view>
