Add "cliente" view

--- a/projects/demo-app/src/app/toolbar/toolbar.component.html
+++ b/projects/demo-app/src/app/toolbar/toolbar.component.html
@@ -4,12 +4,12 @@
 
     <div fxFlex></div>
 
-    <button mat-button>
+    <button mat-button routerLink="/funcionarios">
         Funcionários
     </button>
 
-    <button mat-button>
-        Outro
+    <button mat-button routerLink="/clientes">
+        Clientes
     </button>
 
     <button mat-icon-button (click)="toggleTheme()" matTooltip="Trocar tema">
