--- a/projects/data-view/src/lib/toolbar/toolbar.component.html
+++ b/projects/data-view/src/lib/toolbar/toolbar.component.html
@@ -6,7 +6,7 @@
         <mat-icon>refresh</mat-icon>
     </button>
 
-    <ng-container *ngIf="filterBadge$ | async as filterBadge">
+    <ng-container *ngIf="filter && filterBadge$ | async as filterBadge">
         <button mat-icon-button matTooltip="Filtros" (click)="toggleFilter()">
             <mat-icon [matBadge]="filterBadge.numFilters" [matBadgeHidden]="filterBadge.hidden" matBadgeColor="accent"
                 matBadgeSize="small">
