--- a/projects/data-view/src/lib/filter-buttons/filter-buttons.component.html
+++ b/projects/data-view/src/lib/filter-buttons/filter-buttons.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row">
+<mat-toolbar>
 
     <button mat-button type="button" (click)="reset()">
         Reiniciar
@@ -6,8 +6,8 @@
 
     <div fxFlex></div>
 
-    <button type="submit" mat-flat-button color="primary">
+    <button mat-button type="submit" color="primary">
         Filtrar
     </button>
 
-</div>
+</mat-toolbar>
