--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="container" [class.dark-theme]="darkTheme$ | async" fxLayout="column">
-    <app-toolbar></app-toolbar>
+    <app-toolbar class="mat-elevation-z4"></app-toolbar>
     <div fxFlex>
         <router-outlet></router-outlet>
     </div>
