--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -1,6 +1,11 @@
-<div id="container" [class.dark-theme]="darkTheme$ | async" fxLayout="column">
-    <app-toolbar class="mat-elevation-z4"></app-toolbar>
-    <div fxFlex>
-        <router-outlet></router-outlet>
+<div [class.dark-theme]="darkTheme$ | async">
+
+    <div id="main-container" fxLayout="column">
+
+        <app-toolbar class="mat-elevation-z4"></app-toolbar>
+
+        <div fxFlex>
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
