Ajustes de UI/UX

--- a/projects/demo-app/src/app/clientes/data-view/data-view.component.html
+++ b/projects/demo-app/src/app/clientes/data-view/data-view.component.html
@@ -1,2 +1,2 @@
-<tds-data-view titulo="Pesquisar" [table]="table" pageSize="10">
+<tds-data-view titulo="Pesquisar" [table]="table" [filter]="filter" pageSize="10">
 </tds-data-view>
