--- a/projects/demo-app/src/app/clientes/filtro/filtro.component.html
+++ b/projects/demo-app/src/app/clientes/filtro/filtro.component.html
@@ -1,1 +1,7 @@
-<p>filtro works!</p>
+<div id="form-container" fxLayout="column">
+    <div id="container" fxFlex>
+        Filtro works
+    </div>
+
+    <tds-filter-buttons></tds-filter-buttons>
+</div>
