--- a/projects/demo-app/src/app/clientes/filtro/filtro.component.scss
+++ b/projects/demo-app/src/app/clientes/filtro/filtro.component.scss
@@ -1,3 +1,13 @@
 :host {
   display: block;
+  height: 100%;
+}
+
+#form-container {
+  height: 100%;
+  overflow: auto;
+}
+
+#container {
+  padding: 1em;
 }
