--- a/projects/data-view/scss/_data-view.component.theme.scss
+++ b/projects/data-view/scss/_data-view.component.theme.scss
@@ -1,7 +1,9 @@
 @import "./search.component.theme";
 @import "./table.component.theme";
+@import "./filter-buttons.component.theme";
 
 @mixin data-view-theme($theme, $typography) {
   @include tds-search-theme($theme, $typography);
   @include tds-table-theme($theme);
+  @include tds-filter-buttons();
 }
