--- a/projects/demo-app/src/app/clientes/filtro/filtro.component.scss
+++ b/projects/demo-app/src/app/clientes/filtro/filtro.component.scss
@@ -3,11 +3,11 @@
   height: 100%;
 }
 
-#form-container {
+form {
   height: 100%;
   overflow: auto;
 }
 
 #container {
-  padding: 1em;
+  padding: 1.5em;
 }
