Fix mixin leaking

--- a/projects/data-view/scss/_filter-buttons.component.theme.scss
+++ b/projects/data-view/scss/_filter-buttons.component.theme.scss
@@ -1,5 +1,7 @@
 @mixin tds-filter-buttons() {
-  .mat-toolbar {
-    height: $mat-toolbar-height-mobile;
+  tds-filter-buttons {
+    .mat-toolbar {
+      height: $mat-toolbar-height-mobile;
+    }
   }
 }
