Ajustes de filtro/paginacao

--- a/projects/demo-app/src/app/clientes/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/clientes/tabela/tabela.component.html
@@ -16,7 +16,7 @@
     </ng-container>
 
     <ng-container matColumnDef="moeda">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Moeda</th>
+        <th mat-header-cell *matHeaderCellDef>Moeda</th>
         <td mat-cell *matCellDef="let element">{{ element.moeda }}</td>
     </ng-container>
 
