--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -1,11 +1,14 @@
 <div [class.dark-theme]="darkTheme$ | async">
+    <mat-drawer-container autosize>
 
-    <div id="main-container" fxLayout="column">
+        <div fxLayout="column">
 
-        <app-toolbar class="mat-elevation-z4"></app-toolbar>
+            <app-toolbar class="mat-elevation-z4"></app-toolbar>
 
-        <div fxFlex>
-            <router-outlet></router-outlet>
+            <div fxFlex>
+                <router-outlet></router-outlet>
+            </div>
         </div>
-    </div>
+
+    </mat-drawer-container>
 </div>
