--- a/projects/demo-app/src/scss/app-core.scss
+++ b/projects/demo-app/src/scss/app-core.scss
@@ -1,16 +1,13 @@
+// Default Angular Material
 @import "~@angular/material/theming";
 @include mat-core();
 
+// Material Overrides
+@import "./app-bar_override";
+@import "./typography-override";
+
 // External Libraries
 @import "projects/data-view/scss/data-view.component.theme";
-
-// Current Scss folder
-@import "./app-bar_override";
-@import "./app-body-theme";
-@import "./app-theme";
-@import "./app-typography";
-@import "./mat-drawer-custom-theme";
-@import "./mat-toolbar-custom-theme";
 
 // Custom Themes
 @import "../themes/candy-app-theme.scss";
