--- a/projects/demo-app/src/themes/candy-app-theme.scss
+++ b/projects/demo-app/src/themes/candy-app-theme.scss
@@ -2,10 +2,18 @@
   $primary: mat-palette($mat-indigo);
   $accent: mat-palette($mat-pink, A200, A100, A400);
   $theme: mat-light-theme($primary, $accent);
-  $typography: get-app-typography();
 
+  // Override for "app-bar"
   $theme: app-bar-override($theme);
 
-  @include angular-material-theme($theme);
-  @include app-theme($theme, $typography);
+  // Override for "typography"
+  $typography: typography-override();
+
+  $config: (
+    color: $theme,
+    typography: $typography,
+  );
+
+  @include angular-material-theme($config);
+  @include data-view-theme($theme, $typography);
 }
