--- a/projects/demo-app/src/themes/dark-app-theme.scss
+++ b/projects/demo-app/src/themes/dark-app-theme.scss
@@ -1,11 +1,19 @@
 @mixin dark-app-theme() {
-  $primary: mat-palette($mat-purple);
-  $accent: mat-palette($mat-green, A200, A100, A400);
+  $primary: mat-palette($mat-pink);
+  $accent: mat-palette($mat-blue-grey);
   $theme: mat-dark-theme($primary, $accent);
-  $typography: get-app-typography();
 
+  // Override for "app-bar"
   $theme: app-bar-override($theme);
 
-  @include angular-material-theme($theme);
-  @include app-theme($theme, $typography);
+  // Override for "typography"
+  $typography: typography-override();
+
+  $config: (
+    color: $theme,
+    typography: $typography,
+  );
+
+  @include angular-material-theme($config);
+  @include data-view-theme($theme, $typography);
 }
