--- a/projects/demo-app/src/themes/dark-app-theme.scss
+++ b/projects/demo-app/src/themes/dark-app-theme.scss
@@ -1,6 +1,6 @@
 @mixin dark-app-theme() {
-  $primary: mat-palette($mat-pink);
-  $accent: mat-palette($mat-blue-grey);
+  $primary: mat-palette($mat-purple);
+  $accent: mat-palette($mat-green, A200, A100, A400);
   $theme: mat-dark-theme($primary, $accent);
 
   // Override for "app-bar"
