Rename file for consistency

--- a/projects/demo-app/src/scss/app-core.scss
+++ b/projects/demo-app/src/scss/app-core.scss
@@ -3,7 +3,7 @@
 @include mat-core();
 
 // Material Overrides
-@import "./app-bar_override";
+@import "./app-bar-override";
 @import "./typography-override";
 
 // External Libraries
