--- a/projects/data-view/scss/_tds-data-view.theme.scss
+++ b/projects/data-view/scss/_tds-data-view.theme.scss
@@ -1,7 +1,7 @@
 @import "./search.component.theme";
 @import "./filter-buttons.component.theme";
 
-@mixin data-view-theme($theme, $typography: null) {
-  @include tds-search-theme($theme, $typography);
+@mixin tds-data-view-theme($theme) {
+  @include tds-search-theme($theme);
   @include tds-filter-buttons();
 }
