--- a/projects/demo-app/src/scss/app-core.scss
+++ b/projects/demo-app/src/scss/app-core.scss
@@ -7,7 +7,8 @@
 @import "./typography-override";
 
 // External Libraries
-@import "projects/data-view/scss/data-view.component.theme";
+@import "projects/data-view/scss/_tds-data-view.theme";
+@import "projects/data-view/scss/_tds-data-view.typography";
 
 // Custom Themes
 @import "../themes/candy-app-theme.scss";
