--- a/projects/data-view/src/lib/filter-buttons/filter-buttons.component.html
+++ b/projects/data-view/src/lib/filter-buttons/filter-buttons.component.html
@@ -1,6 +1,6 @@
 <mat-divider></mat-divider>
 
-<mat-toolbar>
+<div id="button-container">
 
     <button mat-button type="button" (click)="reset()">
         Reiniciar
@@ -12,4 +12,4 @@
         Filtrar
     </button>
 
-</mat-toolbar>
+</div>
