--- a/projects/demo-app/src/app/usuarios/data-view/data-view.component.html
+++ b/projects/demo-app/src/app/usuarios/data-view/data-view.component.html
@@ -1,1 +1,1 @@
-<tds-data-view [table]="table" titulo="Usuários"></tds-data-view>
+<tds-data-view [table]="table" titulo="Usuários" [paginator]="false"></tds-data-view>
