--- a/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
@@ -1,5 +1,10 @@
 <table mat-table [dataSource]="data$ | async">
 
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> id </th>
+        <td mat-cell *matCellDef="let usuario"> {{usuario.id}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="avatar">
         <th mat-header-cell *matHeaderCellDef> Avatar </th>
         <td mat-cell *matCellDef="let usuario">
