--- a/projects/demo-app/src/app/clientes/filtro/filtro.component.html
+++ b/projects/demo-app/src/app/clientes/filtro/filtro.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" #ngForm="ngForm" fxLayout="column" (submit)="onSubmit()">
+<form [formGroup]="form" #ngForm="ngForm" fxLayout="column" (ngSubmit)="onSubmit()">
 
     <div id="container" fxFlex fxLayout="column">
 
