--- a/projects/demo-app/src/app/app.component.html
+++ b/projects/demo-app/src/app/app.component.html
@@ -3,7 +3,7 @@
 
         <div fxLayout="column">
 
-            <app-toolbar class="mat-elevation-z4"></app-toolbar>
+            <app-toolbar></app-toolbar>
 
             <div fxFlex>
                 <router-outlet></router-outlet>
