--- a/projects/demo-app/src/app/funcionarios/data-view/data-view.component.html
+++ b/projects/demo-app/src/app/funcionarios/data-view/data-view.component.html
@@ -1,2 +1,2 @@
-<tds-data-view titulo="Funcionários" [table]="table" [filter]="filter" pageSize="20" margin="1.2em" elevation="1">
+<tds-data-view titulo="Funcionários" margin="1.2em" [table]="table" [filter]="filter" [pageSize]="20" [elevation]="1">
 </tds-data-view>
