--- a/projects/demo-app/src/app/app.component.scss
+++ b/projects/demo-app/src/app/app.component.scss
@@ -1,16 +1,12 @@
 :host {
   display: block;
-  height: 100%;
+  height: 100vh;
 }
 
-div {
-  height: inherit;
+#container {
+  overflow: auto;
 }
 
-app-toolbar {
-  z-index: 2;
-}
-
-mat-drawer-container {
+.mat-drawer-container {
   height: 100%;
 }
