--- a/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/funcionarios/tabela/tabela.component.html
@@ -1,41 +1,46 @@
-<table mat-table [dataSource]="data$ | async" matSort (matSortChange)="sortData($event)">
+<div id="table-container">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-    </ng-container>
+    <table mat-table [dataSource]="funcionarios" matSort (matSortChange)="sort($event)">
 
-    <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
-        <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
-    </ng-container>
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="sobrenome">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sobrenome</th>
-        <td mat-cell *matCellDef="let element">{{ element.sobrenome }}</td>
-    </ng-container>
+        <ng-container matColumnDef="nome">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Nome</th>
+            <td mat-cell *matCellDef="let element">{{ element.nome }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="idade">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Idade</th>
-        <td mat-cell *matCellDef="let element" [ngStyle]="{ color: setColor(element.idade) }">
-            <span class="idade">{{ element.idade }}</span>
-        </td>
-    </ng-container>
+        <ng-container matColumnDef="sobrenome">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Sobrenome</th>
+            <td mat-cell *matCellDef="let element">{{ element.sobrenome }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="empresa">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Empresa</th>
-        <td mat-cell *matCellDef="let element">{{ element.empresa }}</td>
-    </ng-container>
+        <ng-container matColumnDef="idade">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Idade</th>
+            <td mat-cell *matCellDef="let element" [ngStyle]="{ color: setColor(element.idade) }">
+                <span class="idade">{{ element.idade }}</span>
+            </td>
+        </ng-container>
 
-    <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-    </ng-container>
+        <ng-container matColumnDef="empresa">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Empresa</th>
+            <td mat-cell *matCellDef="let element">{{ element.empresa }}</td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="colunas; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: colunas"></tr>
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
 
-    <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" [attr.colspan]="colunas.length + 1"> Nenhum funcionário localizado </td>
-    </tr>
-</table>
+        <tr mat-header-row *matHeaderRowDef="colunas; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: colunas"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" [attr.colspan]="colunas.length + 1"> Nenhum funcionário localizado </td>
+        </tr>
+    </table>
+</div>
+
+<mat-paginator [length]="registros" (page)="page($event)"></mat-paginator>
