--- a/projects/demo-app/src/app/funcionarios/tabela/tabela.component.scss
+++ b/projects/demo-app/src/app/funcionarios/tabela/tabela.component.scss
@@ -1,5 +1,6 @@
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 table {
@@ -11,4 +12,9 @@ table {
   background-color: black;
   border-radius: 4px;
   padding: 4px;
+}
+
+#table-container {
+  flex: auto;
+  overflow: auto;
 }
