--- a/projects/demo-app/src/app/funcionarios/query-view/query-view.component.html
+++ b/projects/demo-app/src/app/funcionarios/query-view/query-view.component.html
@@ -1,1 +1,1 @@
-<tds-query-view fxFlex title="Funcionários" [table]="table" [filter]="filter"></tds-query-view>
+<tds-query-view title="Funcionários" [table]="table" [filter]="filter"></tds-query-view>
