--- a/projects/query-view/src/lib/query-view/query-view.component.scss
+++ b/projects/query-view/src/lib/query-view/query-view.component.scss
@@ -1,11 +1,27 @@
-:host {
-  display: block;
-}
-
-#table-container {
-  overflow: hidden;
-}
-
 .mat-drawer-container {
   height: 100%;
+}
+
+.mat-drawer-content {
+  display: flex;
+  flex-direction: column;
+}
+
+.mat-drawer {
+  min-width: 320px;
+  max-width: 100%;
+}
+
+.mat-progress-bar {
+  position: absolute;
+  top: -5px;
+  right: 0;
+  left: 0;
+  z-index: 300;
+}
+
+#content-container {
+  position: relative;
+  flex: 1;
+  overflow: auto;
 }
