--- a/projects/query-view/src/lib/query-view/query-view.component.html
+++ b/projects/query-view/src/lib/query-view/query-view.component.html
@@ -6,10 +6,11 @@
     </mat-drawer>
 
     <mat-drawer-content [style.padding]="margin">
+
         <tds-toolbar [titulo]="title" [ngClass]="getElevation()" [filter]="filter != null"></tds-toolbar>
 
         <div id="content-container" [style.margin-top]="margin" [ngClass]="getElevation()">
-            <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
+            <mat-progress-bar *ngIf="loading$ | async" mode="indeterminate"></mat-progress-bar>
             <tds-table [table]="table"></tds-table>
         </div>
 
