Add behavior from toolbar buttons

--- a/projects/query-view/src/lib/query-view/query-view.component.html
+++ b/projects/query-view/src/lib/query-view/query-view.component.html
@@ -1,15 +1,15 @@
 <mat-drawer-container (backdropClick)="close()">
 
-    <mat-drawer *ngIf="filter" [mode]="filterMode$ | async" [opened]="filterOpened$ | async" position="end"
-        disableClose>
+    <mat-drawer *ngIf="filter" mode="side" [opened]="filter$ | async" position="end" disableClose>
         <tds-filter [filter]="filter"></tds-filter>
     </mat-drawer>
 
-    <mat-drawer-content [style.padding]="margin">
+    <mat-drawer-content>
 
-        <tds-toolbar [titulo]="title" [ngClass]="getElevation()" [filter]="filter != null"></tds-toolbar>
+        <tds-toolbar [style.margin]="margin" [titulo]="title" [ngClass]="getElevation()" [filter]="filter != null">
+        </tds-toolbar>
 
-        <div id="content-container" [style.margin-top]="margin" [ngClass]="getElevation()">
+        <div id="content-container" [style.margin]="margin" [style.margin-top]="0" [ngClass]="getElevation()">
             <mat-progress-bar *ngIf="loading$ | async" mode="indeterminate"></mat-progress-bar>
             <tds-table [table]="table"></tds-table>
         </div>
