--- a/projects/query-view/src/lib/toolbar/toolbar.component.html
+++ b/projects/query-view/src/lib/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
     </button>
 
     <ng-container *ngIf="filter && filterBadge$ | async as filterBadge">
-        <button mat-icon-button matTooltip="Filtros" (click)="toggleFilter()">
+        <button mat-icon-button matTooltip="Filtros" (click)="toggle()">
             <mat-icon [matBadge]="filterBadge.numFilters" [matBadgeHidden]="filterBadge.hidden" matBadgeColor="accent"
                 matBadgeSize="small">
                 tune
