Poder customizar filtros

--- a/projects/demo-app/src/app/funcionarios/filtro/filtro.component.html
+++ b/projects/demo-app/src/app/funcionarios/filtro/filtro.component.html
@@ -1,11 +1,8 @@
-<form [formGroup]="form" #ngForm="ngForm" fxLayout="column" (ngSubmit)="submit()">
+<mat-toolbar>
+    Filtros
+</mat-toolbar>
 
-    <div id="container">
-        <div fxLayout="column">
-            <h3>Idade Máxima</h3>
-            <mat-slider min="18" max="60" thumbLabel [formControl]="idadeMax"></mat-slider>
-        </div>
-    </div>
-
-    <tds-filter-buttons [ngForm]="ngForm"></tds-filter-buttons>
+<form [formGroup]="form" fxLayout="column">
+    <h3>Idade Máxima</h3>
+    <mat-slider fxFlex min="18" max="60" thumbLabel [formControl]="idadeMax"></mat-slider>
 </form>
