--- a/projects/demo-app/src/app/toolbar/toolbar.component.html
+++ b/projects/demo-app/src/app/toolbar/toolbar.component.html
@@ -17,7 +17,7 @@
     </button>
 
     <button mat-icon-button (click)="toggleTheme()" matTooltip="Trocar tema">
-        <mat-icon>{{ (darkTheme$ | async) ? 'flash_off' : 'flash_on'}}</mat-icon>
+        <mat-icon>format_color_fill</mat-icon>
     </button>
 
 </mat-toolbar>
