Substituir data-view por query-view

--- a/projects/demo-app/src/app/clientes/data-view/data-view.component.html
+++ b/projects/demo-app/src/app/clientes/data-view/data-view.component.html
@@ -1,2 +1,2 @@
-<tds-data-view titulo="Pesquisar" [table]="table" [filter]="filter" [pageSize]="4">
-</tds-data-view>
+<tds-query-view title="Pesquisar" [table]="table" [filter]="filter">
+</tds-query-view>
