--- a/projects/demo-app/src/app/clientes/filtro/filtro.component.html
+++ b/projects/demo-app/src/app/clientes/filtro/filtro.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" #ngForm="ngForm" fxLayout="column" (ngSubmit)="onSubmit()">
+<form [formGroup]="form" fxLayout="column" (ngSubmit)="onSubmit()">
 
     <div id="container" fxFlex fxLayout="column">
 
@@ -34,5 +34,4 @@
 
     </div>
 
-    <tds-filter-buttons [ngForm]="ngForm"></tds-filter-buttons>
 </form>
