--- a/projects/demo-app/src/app/clientes/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/clientes/tabela/tabela.component.html
@@ -1,34 +1,38 @@
-<table mat-table [dataSource]="data$ | async" matSort (matSortChange)="sortData($event)">
+<div [style.height]="height">
+    <table mat-table [dataSource]="clientes" matSort (matSortChange)="sort($event)">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-    </ng-container>
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="empresa">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Empresa</th>
-        <td mat-cell *matCellDef="let element">{{ element.empresa }}</td>
-    </ng-container>
+        <ng-container matColumnDef="empresa">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Empresa</th>
+            <td mat-cell *matCellDef="let element">{{ element.empresa }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="pais">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Pais</th>
-        <td mat-cell *matCellDef="let element">{{ element.pais }}</td>
-    </ng-container>
+        <ng-container matColumnDef="pais">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Pais</th>
+            <td mat-cell *matCellDef="let element">{{ element.pais }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="moeda">
-        <th mat-header-cell *matHeaderCellDef>Moeda</th>
-        <td mat-cell *matCellDef="let element">{{ element.moeda }}</td>
-    </ng-container>
+        <ng-container matColumnDef="moeda">
+            <th mat-header-cell *matHeaderCellDef>Moeda</th>
+            <td mat-cell *matCellDef="let element">{{ element.moeda }}</td>
+        </ng-container>
 
-    <ng-container matColumnDef="departamento">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Departamento</th>
-        <td mat-cell *matCellDef="let element">{{ element.departamento }}</td>
-    </ng-container>
+        <ng-container matColumnDef="departamento">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Departamento</th>
+            <td mat-cell *matCellDef="let element">{{ element.departamento }}</td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="colunas; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: colunas"></tr>
+        <tr mat-header-row *matHeaderRowDef="colunas; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: colunas"></tr>
 
-    <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" [attr.colspan]="colunas.length + 1"> Nenhuma empresa localizada </td>
-    </tr>
-</table>
+        <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" [attr.colspan]="colunas.length + 1"> Nenhuma empresa localizada </td>
+        </tr>
+    </table>
+</div>
+
+<mat-paginator [pageSize]="tamanho" [length]="registros" (page)="page($event)"></mat-paginator>
