--- a/projects/demo-app/src/themes/dark-app-theme.scss
+++ b/projects/demo-app/src/themes/dark-app-theme.scss
@@ -1,5 +1,5 @@
 @mixin dark-app-theme() {
-  $primary: mat-palette($mat-purple);
+  $primary: mat-palette($mat-purple, 300, 100, 500);
   $accent: mat-palette($mat-green, A200, A100, A400);
   $theme: mat-dark-theme($primary, $accent);
 
