Show first and last buttons

--- a/projects/demo-app/src/app/clientes/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/clientes/tabela/tabela.component.html
@@ -36,4 +36,4 @@
     </table>
 </div>
 
-<mat-paginator [pageSize]="tamanho" [length]="registros" (page)="page($event)"></mat-paginator>
+<mat-paginator showFirstLastButtons [pageSize]="tamanho" [length]="registros" (page)="page($event)"></mat-paginator>
