Add divider when no margin expecified

--- a/projects/query-view/src/lib/query-view/query-view.component.html
+++ b/projects/query-view/src/lib/query-view/query-view.component.html
@@ -7,7 +7,7 @@
         <tds-toolbar [style.margin]="margin" [titulo]="title" [ngClass]="getElevation()" [filter]="filter != null">
         </tds-toolbar>
 
-        <!-- <mat-divider *ngIf="!margin"></mat-divider> -->
+        <mat-divider *ngIf="!margin"></mat-divider>
 
         <div id="content-container" [style.margin]="margin" [style.margin-top]="0" [ngClass]="getElevation()">
             <mat-progress-bar *ngIf="loading$ | async" mode="indeterminate"></mat-progress-bar>
