--- a/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
+++ b/projects/demo-app/src/app/usuarios/tabela/tabela.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="data$ | async">
+<table mat-table [dataSource]="usuarios">
 
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> id </th>
@@ -22,8 +22,8 @@
         <td mat-cell *matCellDef="let usuario"> {{usuario.email}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
     <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" [attr.colspan]="displayedColumns.length + 1"> Nenhum usuário localizado </td>
