--- a/projects/demo-app/src/themes/candy-app-theme.scss
+++ b/projects/demo-app/src/themes/candy-app-theme.scss
@@ -12,6 +12,6 @@
   @include angular-material-theme($theme);
   @include angular-material-typography($typography);
 
-  @include tds-data-view-theme($theme);
-  @include tds-data-view-typography($typography);
+  @include tds-query-view-theme($theme);
+  @include tds-query-view-typography($typography);
 }
