Remove any references from data-view

--- a/projects/demo-app/src/app/clientes/home/home.component.html
+++ b/projects/demo-app/src/app/clientes/home/home.component.html
@@ -15,5 +15,5 @@
         </mat-card-content>
     </mat-card>
 
-    <app-data-view class="mat-elevation-z2"></app-data-view>
+    <app-query-view class="mat-elevation-z2"></app-query-view>
 </div>
